# publisher

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile
.opencode/: opencode.json
src/: bootstrap.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
src/features/events/: dtos.rs  handlers.rs
src/features/template/: db.rs  dtos.rs  handlers.rs  mod.rs  models.rs
src/infra/: metrics.rs  telemetry.rs
