[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
amqprs = "2.1.5"
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
crc32fast = "1.5.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
